@@ -1,3 +1,9 @@
+2009-01-17  Sergii Stoian <stoyan255@gmail.com>
+	
+	* Framework/GNUmakefile: Include PCFileNameField.h and
+	PCFileNameIcon.h in ProjectCenter_HEADER_FILES as 
+	referenced by PCProjectInspector.h
+
 2009-01-13 Riccardo Mottola <rmottola@users.sf.net>
 
 	* Framework/English.lproj/ProjectDescription.gorm:
